feat: comprehensive mobile optimization - Phase 1-3 complete
- Safe area support for iPhone notch/home indicator
- Reduced animations (removed framer-motion from Layout)
- Touch optimizations (tap-highlight, touch-action)
- On-demand slot generation (no more 180-day preload)
- Loading skeletons instead of spinners
- Bundle optimization (617KB → 388KB, -37%)
- Horizontal stepper on mobile
- Input font-size fix (prevents iOS zoom)
- Haptic feedback on key interactions
- Overflow-x protection
- Reduced API delay (800ms → 400ms)
- Console.log removal in production

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>PsychCentral - Appointment Scheduler</title>
     <meta name="description" content="Schedule, reschedule, or cancel your therapy appointments with PsychCentral" />
     <meta name="author" content="PsychCentral" />
