fix: bug fixes and UX polish
Meta & Branding:
- Updated OG tags to German (psychcentral.app)
- Updated Twitter card metadata
- Updated PWA manifest with psychcentral.app start_url
- Created proper PWA icons (192x192, 512x512)

UX Improvements:
- Hide empty appointment notes on confirmation page
- Enhanced empty state messages on appointments page
- Reduced animation durations (0.8s→0.3s) for consistency
- Improved focus states for accessibility (purple outline)

Performance:
- Updated browserslist database (caniuse-lite)
- No more build warnings

All animations now consistent with Phase 4 mobile optimizations

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
 
-    <meta property="og:title" content="PsychCentral Appointment Scheduler" />
-    <meta property="og:description" content="Manage your therapy appointments with ease" />
+    <meta property="og:title" content="PsychCentral - Terminverwaltung" />
+    <meta property="og:description" content="Terminverwaltung für Ihre Therapie bei Dipl. Arzt Antoine Theurillat" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://psychcentral.app" />
+    <meta property="og:image" content="https://psychcentral.app/lovable-uploads/258abd78-f060-466b-a5e4-b963c44f1d49.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@psychcentral" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="PsychCentral - Terminverwaltung" />
+    <meta name="twitter:description" content="Terminverwaltung für Ihre Therapie bei Dipl. Arzt Antoine Theurillat" />
+    <meta name="twitter:image" content="https://psychcentral.app/lovable-uploads/258abd78-f060-466b-a5e4-b963c44f1d49.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
